# Auralis

./: .gitattributes  .gitignore  CODEX_REVIEW_BRIEF.md  CONTEXT_HANDOVER_2026-04-26.md  HISTORY.md  LESSONS.md  LICENSE  MODEL_LICENSE.md  README.md  STATUS.md  TOKENIZER.md  pyproject.toml
.github/workflows/: ci.yml
Doc/: AURALIS_V2_PROJECT_BRIEF.md  SPEC_DATASETS.md
Doc/REFERENCES/: attention_and_position_encoding.md  data_pipeline_v1.md  data_pipelines_and_frameworks.md  mora_integration.md
Doc/SPECs/: SPEC_MULTI_GPU_TRAINING.md  SPEC_PHASE_0.5_MODEL_ARCHITECTURE.md  SPEC_PHASE_0_TOKENIZER.md  SPEC_PHASE_1_PRETRAINING.md  SPEC_PHASE_2_CONTINUED_BILINGUAL.md  SPEC_PHASE_3_SFT.md  SPEC_PHASE_4_ORPO_ALIGNMENT.md  SPEC_PHASE_5_LORA_SYSTEM.md
configs/: MANIFEST_TEMPLATE.yaml  data_paths.curated_container.yaml  data_paths.curated_v2_german.yaml  data_paths.yaml  data_paths_1b_samples_container.yaml  data_paths_phase2.yaml  data_paths_pretrain_clean_v2.yaml  data_paths_pretrain_clean_v2_container.yaml  data_paths_pretrain_v6_book_sources_gutenberg_clean_v2_container.yaml  data_paths_pretrain_v6_book_sources_gutenberg_v1_container.yaml  data_paths_pretrain_v6_canary_container.yaml  data_paths_pretrain_v6_expanded_test_mix_container.yaml  data_paths_pretrain_v6_strict_mix_container.yaml  data_paths_v4_boosted_container.yaml  data_paths_v5_boosted_container.yaml
configs/ablation/: mix_variants.yaml
configs/curriculum/: helix_1b_curriculum_v1.yaml  helix_1b_language_tree_v1.yaml
configs/data/: curated_40b_mix.yaml  curated_40b_mix_filtered.yaml  german_commons_clean_plan_v1.json  phase1_mix.yaml  pretrain_v6_source_disjoint_plan.yaml  pretrain_v6_vocab_budget_notes.yaml  seed_collection.yaml
configs/dev/: auto_sync.yaml
configs/eval/: auralis_1b_readiness_preflight.yaml
configs/experimental/: knowledge_dna_v2.yaml  knowledge_kernel_v0.yaml  memory_kernel_v0.yaml
configs/model/: helix_v2_100m.yaml  helix_v2_100m_mtp.yaml  helix_v2_100m_ref.yaml  helix_v2_1b.yaml  helix_v2_1b_flash.yaml  helix_v2_1b_plain_ctrl.yaml  helix_v2_250m.yaml  helix_v2_debug_tiny.yaml  (+4 more)
diag/: check_50k.sh  compare_clean.sh  cpu_prefilter.sh  gen_test.md  gen_test_step15000.md  gen_test_step25000.md  gen_test_step50000.md  gen_watch.sh  run_bench.sh  run_bench_de.sh
docs/: ANTWORT_DOKTRIN.md  ARCHITECTURE_VISION_STATUS.md  AURALIS_SAFETY_POLICY.md  BLUEPRINT_DOMAIN_ADAPTERS_DORA.md  BLUEPRINT_TOOL_USE_VERIFIER.md  DATA_PIPELINE_V2.md  DESIGN_LONGCTX_CODE_RECALL.md  DOCS_INDEX.md  EXPERIMENT_diffusion_draft_refine.md  HELIX_V3_BYTE_LEVEL_SKETCH.md  HUB_RAG.md  HUB_SERVING.md  LORA_EVAL_STANDARD.md  MILESTONE_CODE_SKILL.md  MILESTONE_GROUNDED_v4.md  MILESTONE_SFT_v3.md  NEXT_TOKENIZER.md  PHASE_1_LAUNCH.md  POSTMORTEM_messung_vs_daten.md  PROJEKT_STAND.md  SFT_TEACHER_PIPELINE.md  SHARED_STORAGE_SETUP.md  TRAINING_WAVES.md  UNRAID_250M_TEST.md  ZUKUNFT_BACKLOG.md  data_cleaning_pipeline_v3.md  dataset_market_app.md  datastrategie_wissensprofil.md  pretrain_v5_go_no_go.md  sft_eval_gate_policy.md
eval/: README.md  adaptive_margin_probes_v1.yaml  auralis_1b_readiness_gate_v1.yaml  baseline_questions.yaml  baseline_tiers.yaml  benchmarks_v1.yaml  capability_probes_clean_v2.yaml  capability_probes_v4_v5_gate.yaml  disjoint_code_eval_v1.jsonl  disjoint_pretrain_gate_v1.yaml  learning_trace_de_core.yaml  learning_trace_de_repair_v2.yaml  sft_response_fix_chat_gate_v1.yaml  sft_response_fix_chat_gate_v2.yaml  sft_response_fix_chat_gate_v3_holdout.yaml  sft_response_fix_chat_gate_v4_fresh_holdout.yaml  sft_response_fix_chat_gate_v5_fresh_holdout.yaml  sft_response_fix_chat_gate_v6_fresh_holdout.yaml  sft_response_frozen_target_retention_v1.yaml  sft_response_frozen_target_retention_v2.yaml
perf_lab/: .gitignore  README.md
reports/: auralis_1b_language_tree_plan_2026-05-30.md  auralis_1b_lr2e4_mix_ab_smoke_2026-05-30.md  auralis_1b_readiness_plan_2026-05-29.md  auralis_1b_readiness_preflight_2026-05-29.json  auralis_1b_readiness_preflight_2026-05-29.md  auralis_1b_readiness_preflight_curated_40b_v2_2026-05-29.json  auralis_1b_readiness_preflight_curated_40b_v2_2026-05-29.md  auralis_1b_readiness_preflight_v2_2026-05-29.json  auralis_1b_readiness_preflight_v2_2026-05-29.md  auralis_1b_staged_training_plan_2026-05-29.md  auralis_500m_step6000_sft_gate_2026-05-24.md  codex_handoff_1b_readiness_v2_2026-05-29.md  frozen_gate_live_smoke_2026-05-29.jsonl  frozen_response_gate_hybrid_v12_bridge_60_2026-05-29.json  frozen_response_gate_hybrid_v12_bridge_60_2026-05-29.md  frozen_response_gate_hybrid_v12_repair_v2_80_2026-05-29.json  frozen_response_gate_hybrid_v12_repair_v2_80_2026-05-29.md  frozen_response_gate_hybrid_v1_40_2026-05-29.json  frozen_response_gate_hybrid_v1_40_2026-05-29.md  frozen_response_gate_sft_response_v2_2026-05-30_curated_40b_canary.json  frozen_response_gate_sft_response_v2_2026-05-30_curated_40b_canary.md  frozen_response_gate_v1_leakcheck_2026-05-29.json  frozen_response_gate_v2_hybrid_v12_bridge_60_2026-05-29.json  frozen_response_gate_v2_hybrid_v12_bridge_60_2026-05-29.md  frozen_response_gate_v2_hybrid_v12_repair_v2_80_2026-05-29.json  frozen_response_gate_v2_hybrid_v12_repair_v2_80_2026-05-29.md  frozen_response_gate_v2_hybrid_v1_40_2026-05-29.json  frozen_response_gate_v2_hybrid_v1_40_2026-05-29.md  frozen_response_gate_v2_leakcheck_sft_2026-05-29.json  frozen_response_gate_v2_v8_safe_2026-05-29.json  frozen_response_gate_v2_v8_safe_2026-05-29.md  frozen_response_gate_v8_safe_2026-05-29.json  frozen_response_gate_v8_safe_2026-05-29.md  learning_neuro_hybrid_v12_2026-05-29.md  learning_neuro_map_2026-05-29.md  learning_trace_system_2026-05-29.md  pretrain_v5_500m_a100_root_cause_2026-05-26.md  pretrain_v6_book_sources_gutenberg_clean_v2_contamination_2026-05-27.json  pretrain_v6_book_sources_gutenberg_clean_v2_manifest_2026-05-27.json  pretrain_v6_book_sources_gutenberg_clean_v2_tokenized_manifest_2026-05-27.json  (+332 more)
tokenizer/: helix_v2_tokenizer.model  helix_v2_tokenizer.vocab  quality_report.md  training_manifest.yaml
tools/: auralis_fan.sh  ollama_mass_dataset_generator.py
(+515 files in other folders)
