[project]
name = "auralis-v2"
version = "0.1.0"
description = "Auralis v2 — Modular AI Assistant (Helix v2 Model)"
authors = [{ name = "Michael Speckels" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    # Tokenizer
    "sentencepiece>=0.2.0",
    # Core ML
    "torch>=2.5.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "huggingface_hub>=0.25.0",
    "safetensors>=0.4.5",
    # Utils
    "tqdm>=4.66.0",
    "pyyaml>=6.0.2",
    "numpy>=1.26.0",
    "regex>=2024.9.0",
    "fasttext>=0.9.3",
]

[project.optional-dependencies]
train = [
    "accelerate>=1.0.0",
    "unsloth>=2024.10",
    "trl>=0.11.0",
    "deepspeed>=0.15.0",
    "flash-attn>=2.6.3; sys_platform != 'win32'",
    "bitsandbytes>=0.44.0; sys_platform != 'win32'",
    "wandb>=0.18.0",
]
inference = [
    "vllm>=0.6.0; sys_platform != 'win32'",
    "autoawq>=0.2.6",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "ipython>=8.27.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
# Let `pytest` work without an editable install (pip install -e .) by
# putting src/ on sys.path at collection time. Matches what every test
# module expects: `from auralis... import ...`.
pythonpath = ["src"]
